Merchants - first version with GET and Post
